--- a/paper/main_wrangling.bib
+++ b/paper/main_wrangling.bib
@@ -44,13 +44,14 @@
 	bdsk-url-2 = {https://doi.org/10.3386/w33729}}
 
 @article{Hu2025a,
-	author = {Hu, Yue, and Solt, Frederick},
+	author = {Hu, Yue and Solt, Frederick},
 	date-added = {2025-06-24 10:25:34 -0500},
-	date-modified = {2025-06-24 10:25:34 -0500},
+	date-modified = {2025-06-24 12:05:22 -0500},
 	journal = {British Journal of Political Science},
 	number = {e71},
 	pages = {1-10},
 	title = {Macrointerest Across Countries},
+	volume = {55},
 	volumen = {55},
 	year = {2025}}
 
